# adaptive-reliability-layer

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
configs/: bounded_auto_demo.yaml  customer_bounded_auto.yaml  default.yaml  discrimination_benchmark_suite.yaml  discrimination_fraud_context_suite.yaml  discrimination_quartet_suite.yaml  discrimination_trio_suite.yaml  fraud_public_benchmark.yaml  hn_launch_discrimination_quick.yaml  hn_launch_production.yaml  hn_launch_quick.yaml  kafka_ingest_pilot.yaml  outreach_validation.yaml  pilot_fraud_sklearn.yaml  pilot_fraud_tabular.yaml  pilot_fraud_torch.yaml  pilot_fraud_torch_hybrid.yaml  production_benchmark_head_to_head.yaml  production_benchmark_sota_suite.yaml  production_benchmark_suite.yaml  real_data_verification.yaml  serving_pilot_fraud_torch.yaml
docs/: FRESH_INSTALL_VERIFY.md  HN_LAUNCH.md  HN_POST_DRAFT.md  HN_QUICKSTART.md  INDEX.md  SHOW_HN_READY.md  accuracy_experiment_campaign_2026-06-03.md  architecture_review_roadmap.md  backlog.md  benchmark_recommendation_2026-06-03.md  credit_governance.md  current_findings.md  customer_replay.md  discrimination_benchmark.md  fashion_mnist_scale_up.md  graph_shift_track.md  hn_launch_results_2026-06-04.md  hn_launch_results_2026-06-08.md  incident_response.md  latency_budget.md  licensing.md  literature_map.md  multi_deployment_architecture.md  next_step_decision_memo.md  outreach_one_pager.md  positioning.md  product_milestones.md  production_evidence_bar.md  project_thesis.md  prototype_plan.md  pypi_publish.md  risk_metric_spec.md  scale_up_recommendation.md  security_implementation_summary.md  security_threat_model.md  serving_security.md  sidecar_demo.md  sidecar_production.md  sidecar_user_guide.md  state_of_the_art_search_2026-06-02.md  (+7 more)
notebooks/: quickstart_blackbox.py  quickstart_sklearn.py  quickstart_torch.py
scripts/: check_serving_security.py  export_bundled_fraud_data.py  export_bundled_real_data.py  export_cmapss.py  export_elliptic_baf_fraud_data.py  export_open_datasets.py  fetch_public_fraud_raw.py  ingest_baf_kaggle_zip.py  ingest_elliptic_kaggle_zip.py  ingest_ieee_kaggle_zip.py  run_ablation_suite.py  run_accuracy_experiment_campaign.py  run_benchmark.py  run_benchmark_suite.py  run_bounded_auto_demo.py  run_cmapss_action_ablation.py  run_cmapss_benchmark.py  run_correction_path_evaluation.py  run_digits_shift_benchmark.py  run_discrimination_benchmark.py  run_fashion_mnist_shift_benchmark.py  run_fraud_public_benchmark.py  run_graph_shift_benchmark.py  run_hn_launch.py  run_image_scaleup_suite.py  run_ingest_replay.py  run_integrated_policy_comparison.py  run_kafka_ingest_worker.py  run_metrics_server.py  run_monitor_eval.py  run_offline_replay.py  run_outreach_validation.py  run_pilot_case_study.py  run_pilot_sklearn.py  run_pilot_torch.py  run_product_milestones.py  run_production_benchmark_sota_suite.py  run_production_benchmark_suite.py  run_production_failure_analysis.py  run_production_head_to_head.py  (+13 more)
tests/: conftest.py  (+20 more)
(+101 files in other folders)
